# cmoon

./: .gitignore  README.md  config.py  config.yaml  hello.py  ml.py  pyproject.toml  run.py  run_validation.py  strategy.py  test_synthetic.py  zart.py  zart2.py
artifacts/: README.md
backtest/: __init__.py  metrics.py  runner.py  walk_forward.py
configs/: competition.json
data/: README.md
docs/: architecture.md
features/: __init__.py  engineer.py
models/: __init__.py  base_model.py  ensemble.py  lstm_model.py  mean_reversion.py  ml_model.py  model_kapcoin_usd_train.pkl  model_metucoin_usd_train.pkl  model_tamcoin_usd_train.pkl  trend_following.py
notebooks/: README.md
research/: README.md  backtest_window.py  calibrate_threshold.py  ensemble.py  ensemble_model.py  features.py  generate_synthetic_datasets.py  mean_revert_strategy.py  ml_features.py  risk.py  train_models.py  trend_strategy.py  tune_params.py  walk_forward.py
scripts/: build_features.py  generate_dummy_data.py  run_backtest.py  smoke.py
sizing/: __init__.py  sizer.py
src/: __init__.py  backtest.py  backtest_engine.py  coinplotter.py  competition.py  constants.py  cv_splitter.py  data_loader.py  evaluation.py  feature_engineering.py  indicators.py  labeling.py  metrics.py  model_training.py  model_types.py  output_writer.py  pipeline.py  risk_manager.py  runner.py  signal_generator.py  strategy_base.py  strategy_loader.py  utils.py  validation.py
strategies/: __init__.py  v1_sma_cross.py  v2_ml_ensemble.py  v3_final.py
submission/: strateji.py
tests/: README.md  test_contract.py  (+3 more)
(+11 files in other folders)
