[project]
name = "cmoon"
version = "0.1.0"
description = "Competition research and submission scaffold for synthetic OHLCV portfolio strategies."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]
research = [
    "ipykernel>=7.0.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
